syntax = "proto3";

package LoginProto;

message LoginRequest
{
    string username = 1;
    string passwd = 2;
    enum Operation
    {
        Login = 0;
        Register = 1;
    }

    Operation opt = 3;
}

message LoginResponse
{
    bool result = 1;
    string msg = 2;
    string userid = 3;
    uint32 token = 4;

    enum Operation
    {
        Login = 0;
        Register = 1;
    }

    Operation opt = 5;
}

message LoginOut
{
    string userid = 1;
    string reason = 2;
}
